--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Image Search App</h1>
+        <h1>Image Discovery App</h1>
         <form>
             <input
                 type="text"
